[package]
name = "standard"
version = "0.2.7"
edition = "2024"

[dependencies]
steady_state  = {path = "Z:\\kmf-lab\\steady-state-stack\\core"}
#steady_state     = "0.2.8"
clap             = { version = "4.5", features = ["derive"] }
#steady_state     = "0.2.6"
steady_state  = {path = "../steady-state-stack/core" }

clap             = { version = "4.5.38", features = ["derive"] }
